--- a/style.css
+++ b/style.css
@@ -70,37 +70,104 @@ container:after {
 }
 
 /* Jumbotron */
-.jumbotron {
+.hero {
 	background-image: url("https://s3.amazonaws.com/codecademy-content/projects/bestbite/bg.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	height: 500px;
+	margin: 0;
 }
 
-.jumbotron .container {
+.hero .container {
 	position: relative;
 	left: 50px;
 	top: 50px;
 }
 
-.jumbotron h4 {
+.hero h4 {
 	font-family: "Arvo", sans-serif;
 	color: #fff;
 	font-size: 60px;
 }
 
-.jumbotron h4:nth-child(2) {
+.hero h4:nth-child(2) {
 	position: relative;
 	left: 16px;
 }
 
 
-.jumbotron h4:nth-child(3) {
+.hero h4:nth-child(3) {
 	position: relative;
 	left: 42px;
 }
 
-
 /* Question */
+.question {
+	height: 150px;
+	background-color: #333;
+	font-family: "Arvo", sans-serif;
+	text-align: center;
+}
+
+.question p {
+	color: #fff;
+	font-size: 25px;
+	position: relative;
+	top: 30px;
+}
+
+.learn-button {
+	color: #fff;
+	font-size: 15px;
+	background-color: rgba(216,25,47,.5);
+	position: relative;
+	top: 50px;
+	padding: 10px;
+	border-radius: 4px;
+}
+
+.learn-button:hover {
+	text-decoration: none;
+	cursor: pointer;
+}
+
+/* Section */
+section {
+	text-align: center;
+	font-family: "Arvo", sans-serif;
+}
+
+section .container {
+	max-width: 980px;
+}
+
+.container h3 {
+	padding: 50px;
+	margin-bottom: 30px;
+	border-bottom: 1px solid grey;
+	font-weight: 400;
+	font-size: 40px;
+}
+
+.row {
+	padding: 20px 30px;
+	margin-bottom: 30px;
+}
+
+.row h4 {
+	color: rgba(216,25,47,1);
+}
+
+/* Footer */
+footer {
+	height: 80px;
+	background: #eee;
+	text-align: center;
+}
+
+footer p {
+	position: relative;
+	top: 30px;
+}
 
